RESOLVED FIXED37230
REGRESSION (4.0.5): Safari asks for credentials all the time when authenticating to Windows IIS Server
https://bugs.webkit.org/show_bug.cgi?id=37230
Summary REGRESSION (4.0.5): Safari asks for credentials all the time when authenticat...
Alexey Proskuryakov
Reported 2010-04-07 14:08:36 PDT
Safari asks for credentials for each resource from a server using NTLM auth.
Attachments
proposed fix (4.90 KB, patch)
2010-04-07 14:17 PDT, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2010-04-07 14:10:49 PDT
Alexey Proskuryakov
Comment 2 2010-04-07 14:17:28 PDT
Created attachment 52781 [details] proposed fix
Darin Adler
Comment 3 2010-04-07 14:18:41 PDT
Comment on attachment 52781 [details] proposed fix > +#if defined(BUILDING_ON_TIGER) || defined(BUILDING_ON_LEOPARD) > +// There is no contsnt in headers, but NTLM is supported. > +NSString * const NSURLAuthenticationMethodNTLM = @"NSURLAuthenticationMethodNTLM"; > +#endif Typo: "contsnt" How does ProtectionSpaceAuthenticationSchemeUnknown help us? Does it affect behavior? r=me
Alexey Proskuryakov
Comment 4 2010-04-07 14:26:39 PDT
Committed r57232. We don't fall into the default case in if (scheme == ProtectionSpaceAuthenticationSchemeHTTPBasic || scheme == ProtectionSpaceAuthenticationSchemeDefault) { // The map can contain both a path and its subpath - while redundant, this makes lookups faster. pathToDefaultProtectionSpaceMap().set(protectionSpaceMapKeyFromURL(url), protectionSpace); }
Alexey Proskuryakov
Comment 5 2010-04-07 14:31:26 PDT
We were hitting this with "NSURLAuthenticationMethodNTLM" on 10.5, or with "NSURLAuthenticationMethodNegotiate" on 10.6.
Note You need to log in before you can comment on or make changes to this bug.